# sanitizers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  meson.build
tests/: CMakeLists.txt  heap_overflow.c  leak.c  leak.f90  meson.build  no_leak.c  no_leak_mpi.c  tiny_msan.c  tiny_race.c  tiny_ubsan.cpp  use_after_free.c
tests/sup/: lsan.supp
